--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Yellowtail&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
+
+
 body {
     margin-top: 5px;
     width: 960px;
@@ -6,24 +10,55 @@ body {
 }
 
 
- 
+ h1 {
+    font-family: 'Oswald', sans-serif;
+    margin-left: 20px;
+    text-transform: capitalize;
+    font-size: 42px;
+    margin-bottom: -40px;
+    font-weight: bolder;
+ }
 
-.logo1 {
+#logo1 {
     margin-top: 50px;
-    float: left;
-    padding : 40px
+    
+    
+    margin-bottom: -90px;
 }
+.upper{
+    font-family: 'Oswald', sans-serif;
+    font-size: 14px;
+    color: gray;
+    margin-left: -30px;
+    margin-top: -50px;
 
+}
 .div2 {
     float: right;
+    margin-top: -75px;
 }
 header {
     padding-bottom :40px;
-    border-bottom : 4px dotted gray;
-    /* border-image: url(img/border.jpg) 30 round; */
+    /* border-bottom : 4px dotted gray; */
+
+}
+.sep {
+    background-image: url(../img/hr-img.png);
+    background-repeat: repeat-y;
+    background-repeat: repeat-x;
+    height: 100px;
+    width: 100%;
+    margin-bottom: -50px;
+    padding-bottom: -20px;
+    
+}
+h2 {
+    font-family: 'Yellowtail', cursive;
+    font-size: 42px;
 }
 .divheader {
     margin-left: 50px;
+    
 }
 .hero {
     width: 100%;
@@ -32,10 +67,15 @@ header {
 .best {
 color: gray;
 font-weight: lighter;
+font-family: 'Oswald', sans-serif;
+margin-left: -20px;
+font-size: 16px;
+
 }
 .print {
 float: right;
 padding-bottom: 10px;
+margin-top :-40px
 }
 .div3 {
     display: inline ;
@@ -72,18 +112,22 @@ p {
 }
 
 form {
-    border: none;
-    border: 0px;
+    
     border-color: rgba(128, 128, 128, 0);
     background-image: url(img/list-bg.png);
     width: 100%;
+    box-shadow:  3px 3px  #ccc;  
+    margin-bottom: 10px;
     
 }
+    
+
 fieldset {
     padding-left: 50px;
     padding-top: 10;
     padding-bottom: 10px;
-    margin-bottom: 30px;
+    margin-bottom: 60px;
+    border-top: 5px solid gray;
 }
 
 .input1 {
@@ -122,6 +166,7 @@ fieldset {
 }
 form {
     border: hidden;
+    
 }
 .div3 {
     /* border-image: url(img/hr-img.png);
@@ -135,21 +180,54 @@ form {
 button {
     color: white;
     padding : 20px;
-    background-color: rgb(170, 66, 66);
+    background-color: hsl(14deg 43% 54%);
     float: right;
-
+    margin-top: -20px;
 }
 .van {
    float: left;
-    
 }
 footer {
     text-align:center;
     border-top: 1px;
     border-color: gray;
+    color: gray;
 
 }
 footer img {
-    display: block;
+    display: inline-block;
     margin: auto;
+
+    position: relative;
+    padding-bottom: -50px;
+    
+}
+.footer2 {
+    padding-top :40px;
+    border-top: 1px solid gray;
+    /* position :relative; */
+    color: gray;
+    line-height: 10px;
+}
+h3 {
+    margin-top: -50px;
+    margin-left: 30px;
+    margin-bottom: -30px;
+}
+.last {
+    text-indent: 0px;
+    margin-left: 85px;
+    width: 700px;
+    margin-top: 30px;
+}
+.van {
+    margin-top: -30px;
+    padding-top: -50px;
+    margin-bottom: 30px;
+}
+.small {
+    margin-bottom: -20px;
+}
+.p11 {
+margin-bottom: -10px;
 }
