--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ body {
     width: 960px;
     margin: auto;
     padding: 5px;
+    align-content: center;
 }
 
 
@@ -15,32 +16,33 @@ body {
     margin-left: 20px;
     text-transform: capitalize;
     font-size: 42px;
-    margin-bottom: -40px;
+    position: relative;
     font-weight: bolder;
+    bottom: 230px;
  }
 
 #logo1 {
     margin-top: 50px;
     
-    
-    margin-bottom: -90px;
+    position: relative;
+    top :10px;
 }
 .upper{
     font-family: 'Oswald', sans-serif;
     font-size: 14px;
     color: gray;
-    margin-left: -30px;
-    margin-top: -50px;
+    position: relative;
+    right: 30px;
+    bottom: 138px;
 
 }
 .div2 {
     float: right;
-    margin-top: -75px;
+    position: relative;
+    bottom: 185px;
 }
 header {
     padding-bottom :40px;
-    /* border-bottom : 4px dotted gray; */
-
 }
 .sep {
     background-image: url("https://github.com/tamaraalbilleh/chocolate-pizza/blob/main/img/hr-img.png?raw=true");
@@ -48,13 +50,15 @@ header {
     background-repeat: repeat-x;
     height: 100px;
     width: 100%;
-    margin-bottom: -50px;
-    padding-bottom: -20px;
+    position: relative;
+    bottom: 150px;
     
 }
 h2 {
     font-family: 'Yellowtail', cursive;
     font-size: 42px;
+    position: relative;
+    bottom: 90px;
 }
 .divheader {
     margin-left: 50px;
@@ -62,20 +66,25 @@ h2 {
 }
 .hero {
     width: 100%;
+    bottom:320px;
+    position: relative;
     margin-top: 5px;
 }
 .best {
 color: gray;
 font-weight: lighter;
 font-family: 'Oswald', sans-serif;
-margin-left: -20px;
+position: relative;
+right: 20px;
+bottom:295px;
 font-size: 16px;
 
 }
 .print {
 float: right;
 padding-bottom: 10px;
-margin-top :-40px
+position: relative;
+bottom:335px;
 }
 .div3 {
     display: inline ;
@@ -114,7 +123,7 @@ p {
 form {
     
     border-color: rgba(128, 128, 128, 0);
-    background-image: url(img/list-bg.png);
+    background-image: url(/assets/list-bg.png);
     width: 100%;
     box-shadow:  3px 3px  #ccc;  
     margin-bottom: 10px;
@@ -169,9 +178,6 @@ form {
     
 }
 .div3 {
-    /* border-image: url(img/hr-img.png);
-    border-image: repeat 100 times ; */
-    /* padding-top :40px; */
     padding : 10px;
     text-indent: 50px;
 
@@ -182,16 +188,22 @@ button {
     padding : 20px;
     background-color: hsl(14deg 43% 54%);
     float: right;
-    margin-top: -20px;
+    position: relative;
+    bottom: 7px;
 }
 .van {
    float: left;
+   position: relative;
+   top: 0px;
+   bottom: 20px;
 }
 footer {
     text-align:center;
     border-top: 1px;
     border-color: gray;
     color: gray;
+    position: relative;
+    bottom: 350px;
 
 }
 footer img {
@@ -199,36 +211,65 @@ footer img {
     margin: auto;
 
     position: relative;
-    padding-bottom: -50px;
+    top: 2px;
     
 }
 .footer2 {
     padding-top :40px;
     border-top: 1px solid gray;
-    /* position :relative; */
+  
     color: gray;
     line-height: 10px;
 }
 h3 {
-    margin-top: -50px;
-    margin-left: 30px;
-    margin-bottom: -30px;
+    bottom: 50px;
+    right:38px;
+    position: relative;
+    
 }
 .last {
     text-indent: 0px;
     margin-left: 85px;
     width: 700px;
+    position: relative;
+    bottom: 70px;
     margin-top: 30px;
 }
 .van {
-    margin-top: -30px;
-    padding-top: -50px;
+    bottom: 30px;
+    position: relative;
     margin-bottom: 30px;
 }
 .small {
-    margin-bottom: -20px;
+    top: 20px;
+    position: relative;
 }
 
 .p11 {
-margin-bottom: -10px;
+top: 10px;
+position: relative;
+}
+.p1{
+    position: relative;
+    bottom: 300px;
+}
+#recipe {
+    position: relative;
+    bottom: 280px;
+}
+#sep {
+    position: relative;
+    bottom: 450px;
+}
+#fo {
+    position: relative;
+    bottom: 300px;
+}
+#sep {
+    position: relative;
+    bottom: 280px;
+}
+.pp {
+    position: relative;
+    bottom: 50px;
 }
